<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.15">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.6"
                tools:ignore="UselessLeaf">

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_marginStart="15dp"
                        android:layout_marginEnd="12dp"
                        android:layout_weight="0.2"
                        android:background="@drawable/payment_info">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="vertical">

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="50dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:text="@string/qr_payment_title"
                                    android:textColor="#2D73B1"
                                    android:textSize="18sp"
                                    android:textStyle="normal">

                                </TextView>
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="120dp"
                                android:gravity="bottom">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="27dp"
                                    android:layout_marginStart="45dp"
                                    android:layout_marginTop="-27dp"
                                    android:text="@string/amount"
                                    android:textSize="20sp">


                                </TextView>

                                <com.google.android.material.textfield.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="70dp"
                                    android:layout_marginHorizontal="45dp"
                                    android:background="@drawable/qr_input_bg">

                                    <Spinner
                                        android:layout_width="93dp"
                                        android:layout_height="70dp"
                                        android:layout_marginTop="-70dp"
                                        android:drawSelectorOnTop="true"
                                        android:entries="@array/array_name"
                                        tools:ignore="TooDeepLayout">

                                    </Spinner>

                                    <com.google.android.material.textfield.TextInputEditText
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_marginVertical="5dp"
                                        android:layout_marginStart="91dp"
                                        android:layout_marginEnd="3dp"
                                        android:background="@drawable/w_bg"
                                        android:text="@string/input_amount"
                                        android:textSize="25sp" />
                                </com.google.android.material.textfield.TextInputLayout>


                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="250dp"
                                android:layout_height="250dp"
                                android:layout_gravity="center"
                                android:background="@mipmap/qr_icon_foreground">

                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="270dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center"
                                android:layout_marginBottom="60dp">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:text="@string/qr_payment_content"
                                    android:textSize="20sp">

                                </TextView>
                            </RelativeLayout>

                            <RelativeLayout
                                android:layout_width="270dp"
                                android:layout_height="70dp"
                                android:layout_gravity="center">

                                <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:text="@string/qr_payment_refresh"
                                    android:textAllCaps="false"
                                    android:textSize="21sp">

                                </TextView>
                            </RelativeLayout>

                        </LinearLayout>
                    </RelativeLayout>
                </LinearLayout>
            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_color"
            tools:context=".MainActivity">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottomNavigationView"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@drawable/background_color"
                app:itemIconTint="@color/white"
                app:itemTextColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/bottom_nav_menu" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</LinearLayout>